@@ -56,6 +56,7 @@ Version 1.1.6 January 16, 2011
 - Enh #1785: Added CAssetManager::$excludeFiles property to support exclusion of irrelevant files from the publishing process (Y!!)
 - Enh #1836: The contact form model of the blog demo does now make use of CCaptcha::checkRequirements (Y!!)
 - Enh #1842: CHtml::button will not render the name attribute if it is set null (Qiang)
+- Eng #1843: Added CHtml::activeRadioButtonList 'uncheckValue' option that allows to avoid hidden field rendering (creocoder, Sam Dark)
 - Enh #1860: Changed the signature of CValidator::createValidator() to make it easier to use (Qiang)
 - Enh #1849: Updated Blueprint CSS to version 1.0 (sebas)
 - Enh #1872: Added $defaultUrl parameter to CWebUser::getReturnUrl() (Qiang)
